<resources>
    <string name="app_name">IqTest</string>

    <string name="iq_test">IQ Test</string>
    <string name="path_finder">Path Finder</string>
    <string name="word_search">Word Search</string>
    <string name="math">Math</string>
    <string name="question_iq_test">Are you ready to check your IQ?</string>
    <string name="iq_test_description2">You have to find the best answer to question marked place.</string>
    <string name="iq_test_description1">You have 15 minutes to answer 24 questions.</string>
    <string name="classification">Classification</string>
    <string name="iq_range">IQ Range</string>
    <string name="highly_gifted">Highly Gifted</string>
    <string name="you_are_in_a">You are in a&#160;</string>
    <string name="level">&#160;level</string>
    <string name="main_menu">&#160;&#160;Main Menu&#160;&#160;</string>
    <string name="_70"><![CDATA[< 70]]></string>
    <string name="_70_79">70 – 79</string>
    <string name="_80_89">80 – 89</string>
    <string name="_90_109">90 – 109</string>
    <string name="_110_115">110 – 115</string>
    <string name="_115_129">115 – 129</string>
    <string name="_130">130 +</string>
    <string name="_140">140 +</string>
    <string name="mentally_deficient">Mentally Deficient</string>
    <string name="borderline">Borderline</string>
    <string name="low_average">Low Average</string>
    <string name="average">Average</string>
    <string name="high_average">High Average</string>
    <string name="high">High</string>
    <string name="gifted">Gifted</string>
    <string name="iq_rate">IQ Rate&#160;:&#160;</string>
</resources>