<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color"
    tools:context="com.yasiru5071.iqtest.iqResult">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iq_rate"
            android:textSize="26sp"
            android:fontFamily="@font/bigspace"
            android:textColor="@color/gold"/>
        <TextView
            android:id="@+id/correct_answer_count_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:fontFamily="@font/bigspace"
            android:textSize="29sp"
            android:textColor="@color/gold"/>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:alpha="0.5"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/classification_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/classification_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/classification"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <View
                android:id="@+id/classification_line"
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:layout_below="@id/classification_txt"
                android:alpha="0.8"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/iqRange_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/iqRange_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/iq_range"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <View
                android:id="@+id/iqRange_line"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_below="@id/iqRange_txt"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.8"
                android:background="@color/white" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/classification_layout">
            <TextView
                android:id="@+id/highly_gifted_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/highly_gifted"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:alpha="0.8"/>
            <TextView
                android:id="@+id/gifted_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/gifted"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:alpha="0.8"/>
            <TextView
                android:id="@+id/high_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/high"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:alpha="0.8"/>
            <TextView
                android:id="@+id/high_average_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/high_average"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:alpha="0.8"/>
            <TextView
                android:id="@+id/average_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/average"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:alpha="0.8"/>
            <TextView
                android:id="@+id/low_average_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/low_average"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:alpha="0.8"/>
            <TextView
                android:id="@+id/bordline_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/borderline"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:alpha="0.8"/>
            <TextView
                android:id="@+id/mentally_deficient_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/mentally_deficient"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:alpha="0.8"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/classification_layout"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/highly_gifted_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.8"
                android:text="@string/_140"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/gifted_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.8"
                android:text="@string/_130"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/high_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.8"
                android:text="@string/_115_129"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/high_average_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.8"
                android:text="@string/_110_115"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/average_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.8"
                android:text="@string/_90_109"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/low_average_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.8"
                android:text="@string/_80_89"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bordline_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.8"
                android:text="@string/_70_79"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mentally_deficient_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.8"
                android:text="@string/_70"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginBottom="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/iqtest_mainmenu_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/continue_btn_back"
                android:fontFamily="@font/tw_sen_mt"
                android:text="@string/main_menu"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

    </RelativeLayout>



</LinearLayout>