<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yasiru5071.iqtest.iqtest_activity"
    android:background="@color/main_color">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tektonpro"
        android:gravity="center_horizontal"
        android:text="@string/question_iq_test"
        android:textColor="@color/white"
        android:textSize="37sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/description_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/tektonpro"
            android:gravity="center_horizontal"
            android:text="@string/iq_test_description1"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/description_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/tektonpro"
            android:gravity="center_horizontal"
            android:text="@string/iq_test_description2"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/iqtest_continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="   Continue   "
        android:textAllCaps="false"
        android:fontFamily="@font/tw_sen_mt"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:background="@drawable/continue_btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>